WIP:  HTML + JS launchpad
- javascript parsets '?meeting=guid' to strip out guid

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,19 +2,21 @@
 <html>
 
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js" defer></script>
+  <script src="https://d3js.org/d3.v4.min.js" defer></script>
+  <script src="charlotte.js" defer></script>
 </head>
 
 <body>
   <p>Before the script...</p>
-  <script src="charlotte.js" /></script>
   <p>...After the script.</p>
+  <p id="asdf">
+    asdfsdfg
+  </p>
   <p id="xyz">
     test
   </p>
 
-  <p id="last">
-  </p>
 
 </body>
 
